Added testing with custom resolutions: 1. Updated assertScreen to run with multiple supplied resolutions 2. Added test and screen files for custom resolutions ("360x800", "1280x720", "1920x1080") 3. Modified browser setup to support changing window resolution 4. Added browser close on test finish 5. Updated README